--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,5 @@
 High Density Expandable cpOD-M motherboard.  Jon Robinson requested a larger motherboard
-comparable to Dr. Chubb's ODMB. The plan is to get as many cpOD-Ms as possible into a 7
+comparable to Dr. Chubb's ODMB. The pbject is to get as many cpOD-Ms as possible into a 7
 x 15 CM board and provide connectors for expansion. He also requested keeping the logic 
 level outputs away from the block power outputs.  The board will be expandable via an end
 connector.  More than two are not recommended as the copper is only good for about 5 Amps.
-
-Remaining lines: a verbose changelog of what makes this "git version" different from the last.
-Use this space (in Markdown format) to describe the context and details of the changes.
-This section should be 5 to 20 lines of interesting detail; each version tab in the project will 
-display this text to help the reader understand why this version is differnet...
-
-The published project on the SPCoast.github.io website will
-include the relevant git commit messages as a terse, high level
-changelog, so don't replicate those messages here.
-
